Add compile for vcf2bimbam

--- a/vcfCleaner/Makefile
+++ b/vcfCleaner/Makefile
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -O3 -Wall
-BIN = vcfCleaner expandrf
+BIN = vcfCleaner expandrf vcf2bimbam
 
 all: $(BIN)
 
@@ -8,6 +8,8 @@ vcfCleaner: vcfCleaner.cpp vcfCleaner.h
 	$(CXX) $(CXXFLAGS) vcfCleaner.cpp -o vcfCleaner
 expandrf: expandrf.cpp
 	$(CXX) $(CXXFLAGS) expandrf.cpp -o expandrf
+vcf2bimbam: vcf2bimbam.cpp
+	$(CXX) $(CXXFLAGS) vcf2bimbam.cpp -o vcf2bimbam
 
 clean:
 	rm -f $(BIN) *.o *.d
