add vcf2eigenstrat to makefile

--- a/vcfCleaner/Makefile
+++ b/vcfCleaner/Makefile
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -O3 -Wall
-BIN = vcfCleaner expandrf vcf2bimbam vcf2sweepfinder
+BIN = vcfCleaner expandrf vcf2bimbam vcf2sweepfinder vcf2eigenstrat
 
 all: $(BIN)
 
@@ -12,6 +12,8 @@ vcf2bimbam: vcf2bimbam.cpp
 	$(CXX) $(CXXFLAGS) vcf2bimbam.cpp -o vcf2bimbam
 vcf2sweepfinder: vcf2sweepfinder.cpp
 	$(CXX) $(CXXFLAGS) vcf2sweepfinder.cpp -o vcf2sweepfinder
+vcf2eigenstrat: vcf2eigenstrat.cpp
+	$(CXX) $(CXXFLAGS) vcf2eigenstrat.cpp -o vcf2eigenstrat
 
 clean:
 	rm -f $(BIN) *.o *.d
